[gd_scene load_steps=9 format=3 uid="uid://y8xcqqs34ym4"]

[ext_resource type="Texture2D" uid="uid://8bfsq8gqipdk" path="res://LockPicking/Lock.png" id="1_cvuvf"]
[ext_resource type="Script" uid="uid://bsdtjt8dbq8er" path="res://lock_picking.gd" id="1_oyjlt"]
[ext_resource type="Texture2D" uid="uid://ceoyuig3bfo0j" path="res://LockPicking/Lockpick.webp" id="2_pr373"]

[sub_resource type="Animation" id="Animation_oyjlt"]
length = 0.001
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(508, 255)]
}

[sub_resource type="Animation" id="Animation_pr373"]
resource_name = "jigglejiggle"
length = 3.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1, 2, 2.93333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(488.81, 216.621), Vector2(486, 219), Vector2(488, 292), Vector2(492, 265)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oyjlt"]
_data = {
&"RESET": SubResource("Animation_oyjlt"),
&"jigglejiggle": SubResource("Animation_pr373")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rxwwl"]
size = Vector2(50.5, 38.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvuvf"]
size = Vector2(12, 38)

[node name="LockPicking" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 44.0
offset_bottom = 43.0
script = ExtResource("1_oyjlt")

[node name="Lock" type="Sprite2D" parent="."]
position = Vector2(581, 247)
scale = Vector2(0.808889, 0.782222)
texture = ExtResource("1_cvuvf")

[node name="LockPick" type="Sprite2D" parent="."]
position = Vector2(508, 255)
rotation = 0.760964
scale = Vector2(0.363279, 0.310228)
texture = ExtResource("2_pr373")

[node name="AnimationPlayer" type="AnimationPlayer" parent="LockPick"]
libraries = {
&"": SubResource("AnimationLibrary_oyjlt")
}

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 345.0
offset_top = 382.0
offset_right = 839.0
offset_bottom = 421.0
color = Color(0.211765, 0.239216, 0.290196, 1)

[node name="Redzone" type="Area2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Redzone"]
offset_left = 697.0
offset_top = 382.0
offset_right = 748.0
offset_bottom = 420.0
color = Color(0.773823, 0.177122, 0.166563, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Redzone"]
position = Vector2(721.75, 399.75)
shape = SubResource("RectangleShape2D_rxwwl")

[node name="Pin" type="Area2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Pin"]
offset_left = 636.0
offset_top = 382.0
offset_right = 647.0
offset_bottom = 419.0
color = Color(0.208037, 0.199528, 0.833968, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pin"]
position = Vector2(641, 399)
shape = SubResource("RectangleShape2D_cvuvf")

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 516.0
offset_top = 448.0
offset_right = 692.0
offset_bottom = 471.0
text = "Try Unlocking the Lock"

[node name="NextButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 573.0
offset_top = 505.0
offset_right = 635.0
offset_bottom = 536.0
text = "Button"

[connection signal="area_shape_entered" from="Redzone" to="." method="_on_redzone_area_shape_entered"]
[connection signal="area_shape_exited" from="Redzone" to="." method="_on_redzone_area_shape_exited"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
